crates/kjarni-ffi/include/kjarni.h

/**
 * Error codes returned by Kjarni FFI functions.
 */
typedef enum KjarniErrorCode {
  /**
   * Operation completed successfully
   */
  KJARNI_ERROR_CODE_OK = 0,
  /**
   * Null pointer passed to function
   */
  KJARNI_ERROR_CODE_NULL_POINTER = 1,
  /**
   * Invalid UTF-8 string
   */
  KJARNI_ERROR_CODE_INVALID_UTF8 = 2,
  /**
   * Model not found in registry
   */
  KJARNI_ERROR_CODE_MODEL_NOT_FOUND = 3,
  /**
   * Failed to load model
   */
  KJARNI_ERROR_CODE_LOAD_FAILED = 4,
  /**
   * Inference operation failed
   */
  KJARNI_ERROR_CODE_INFERENCE_FAILED = 5,
  /**
   * GPU not available
   */
  KJARNI_ERROR_CODE_GPU_UNAVAILABLE = 6,
  /**
   * Invalid configuration
   */
  KJARNI_ERROR_CODE_INVALID_CONFIG = 7,
  /**
   * Operation was cancelled
   */
  KJARNI_ERROR_CODE_CANCELLED = 8,
  /**
   * Operation timed out
   */
  KJARNI_ERROR_CODE_TIMEOUT = 9,
  /**
   * Stream has ended
   */
  KJARNI_ERROR_CODE_STREAM_ENDED = 10,
  /**
   * Unknown error
   */
  KJARNI_ERROR_CODE_UNKNOWN = 255,
} KjarniErrorCode;
/**
 * Device selection for inference.
 */
typedef enum KjarniDevice {
  /**
   * Use CPU for inference
   */
  KJARNI_DEVICE_CPU = 0,
  /**
   * Use GPU for inference
   */
  KJARNI_DEVICE_GPU = 1,
} KjarniDevice;
/**
 * Progress stage enum for FFI
 */
typedef enum KjarniProgressStage {
  KJARNI_PROGRESS_STAGE_SCANNING = 0,
  KJARNI_PROGRESS_STAGE_LOADING = 1,
  KJARNI_PROGRESS_STAGE_EMBEDDING = 2,
  KJARNI_PROGRESS_STAGE_WRITING = 3,
  KJARNI_PROGRESS_STAGE_COMMITTING = 4,
  KJARNI_PROGRESS_STAGE_SEARCHING = 5,
  KJARNI_PROGRESS_STAGE_RERANKING = 6,
} KjarniProgressStage;
typedef enum KjarniSearchMode {
  KJARNI_SEARCH_MODE_KEYWORD = 0,
  KJARNI_SEARCH_MODE_SEMANTIC = 1,
  KJARNI_SEARCH_MODE_HYBRID = 2,
} KjarniSearchMode;
/**
 * Float array returned by FFI functions. Caller must free with kjarni_float_array_free.
 */
typedef struct KjarniFloatArray {
  float *data;
  uintptr_t len;
} KjarniFloatArray;
/**
 * 2D float array for batch results. Caller must free with kjarni_float_2d_array_free.
 */
typedef struct KjarniFloat2DArray {
  float *data;
  uintptr_t rows;
  uintptr_t cols;
} KjarniFloat2DArray;
/**
 * Configuration for creating an Embedder.
 */
typedef struct KjarniEmbedderConfig {
  /**
   * Device to use (CPU or GPU)
   */
  enum KjarniDevice device;
  /**
   * Cache directory for models (NULL = default)
   */
  const char *cache_dir;
  /**
   * Model name from registry (NULL = "minilm-l6-v2")
   */
  const char *model_name;
  /**
   * Path to local model (NULL = use registry)
   */
  const char *model_path;
  /**
   * Whether to L2-normalize embeddings (1 = yes, 0 = no)
   */
  int32_t normalize;
  /**
   * Suppress progress output (1 = quiet, 0 = verbose)
   */
  int32_t quiet;
} KjarniEmbedderConfig;
/**
 * Single classification result (label + score).
 */
typedef struct KjarniClassResult {
  char *label;
  float score;
} KjarniClassResult;
typedef struct KjarniClassResults {
  struct KjarniClassResult *results;
  uintptr_t len;
} KjarniClassResults;
typedef struct KjarniClassifierConfig {
  /**
   * Device to use
   */
  enum KjarniDevice device;
  /**
   * Cache directory (NULL = default)
   */
  const char *cache_dir;
  /**
   * Model name (NULL = default)
   */
  const char *model_name;
  /**
   * Model path (NULL = use registry)
   */
  const char *model_path;
  /**
   * Custom labels (NULL = use model labels)
   */
  const char *const *labels;
  /**
   * Number of custom labels
   */
  uintptr_t num_labels;
  /**
   * Multi-label mode (1 = multi-label, 0 = single-label)
   */
  int32_t multi_label;
  /**
   * Suppress output
   */
  int32_t quiet;
} KjarniClassifierConfig;
/**
 * Single rerank result
 */
typedef struct KjarniRerankResult {
  uintptr_t index;
  float score;
} KjarniRerankResult;
/**
 * Array of rerank results
 */
typedef struct KjarniRerankResults {
  struct KjarniRerankResult *results;
  uintptr_t len;
} KjarniRerankResults;
/**
 * Configuration for Reranker
 */
typedef struct KjarniRerankerConfig {
  enum KjarniDevice device;
  const char *cache_dir;
  const char *model_name;
  const char *model_path;
  int32_t quiet;
} KjarniRerankerConfig;
/**
 * Information about an existing index
 */
typedef struct KjarniIndexInfo {
  /**
   * Path to the index directory (must be freed)
   */
  char *path;
  /**
   * Total number of documents in the index
   */
  uintptr_t document_count;
  /**
   * Number of index segments
   */
  uintptr_t segment_count;
  /**
   * Embedding dimension
   */
  uintptr_t dimension;
  /**
   * Total size on disk in bytes
   */
  uint64_t size_bytes;
  /**
   * Embedding model name used to create the index (may be NULL, must be freed if not)
   */
  char *embedding_model;
} KjarniIndexInfo;
/**
 * Configuration for creating an Indexer
 */
typedef struct KjarniIndexerConfig {
  /**
   * Device to run embeddings on (CPU or GPU)
   */
  enum KjarniDevice device;
  /**
   * Directory to cache downloaded models (NULL = system default)
   */
  const char *cache_dir;
  /**
   * Embedding model name (NULL = "minilm-l6-v2")
   */
  const char *model_name;
  /**
   * Maximum chunk size in characters
   */
  uintptr_t chunk_size;
  /**
   * Overlap between adjacent chunks in characters
   */
  uintptr_t chunk_overlap;
  /**
   * Batch size for embedding operations
   */
  uintptr_t batch_size;
  /**
   * Comma-separated list of file extensions to include (NULL = use defaults)
   */
  const char *extensions;
  /**
   * Comma-separated list of glob patterns to exclude
   */
  const char *exclude_patterns;
  /**
   * Whether to recurse into subdirectories (1 = true, 0 = false)
   */
  int32_t recursive;
  /**
   * Whether to include hidden files (1 = true, 0 = false)
   */
  int32_t include_hidden;
  /**
   * Maximum file size in bytes (0 = no limit)
   */
  uintptr_t max_file_size;
  /**
   * Suppress progress output to stderr (1 = quiet, 0 = verbose)
   */
  int32_t quiet;
} KjarniIndexerConfig;
typedef struct KjarniIndexStats {
  /**
   * Number of document chunks indexed (after splitting)
   */
  uintptr_t documents_indexed;
  /**
   * Number of chunks created from source files
   */
  uintptr_t chunks_created;
  /**
   * Embedding dimension used
   */
  uintptr_t dimension;
  /**
   * Total index size on disk in bytes
   */
  uint64_t size_bytes;
  /**
   * Number of source files successfully processed
   */
  uintptr_t files_processed;
  /**
   * Number of source files skipped (errors, unsupported format, too large)
   */
  uintptr_t files_skipped;
  /**
   * Total time taken in milliseconds
   */
  uint64_t elapsed_ms;
} KjarniIndexStats;
/**
 * Progress data passed to callbacks
 */
typedef struct KjarniProgress {
  enum KjarniProgressStage stage;
  uintptr_t current;
  uintptr_t total;
  const char *message;
} KjarniProgress;
typedef struct KjarniSearchResult {
  float score;
  uintptr_t document_id;
  char *text;
  char *metadata_json;
} KjarniSearchResult;
typedef struct KjarniSearchResults {
  struct KjarniSearchResult *results;
  uintptr_t len;
} KjarniSearchResults;
typedef struct KjarniSearchOptions {
  int32_t mode;
  uintptr_t top_k;
  int32_t use_reranker;
  float threshold;
  const char *source_pattern;
  const char *filter_key;
  const char *filter_value;
} KjarniSearchOptions;
typedef struct KjarniSearcherConfig {
  enum KjarniDevice device;
  const char *cache_dir;
  const char *model_name;
  const char *rerank_model;
  enum KjarniSearchMode default_mode;
  uintptr_t default_top_k;
  int32_t quiet;
} KjarniSearcherConfig;
/**
 * Initialize the Kjarni runtime. Optional - auto-initialized on first use.
 */
enum KjarniErrorCode kjarni_init(void);
/**
 * Get the library version string.
 */
const char *kjarni_version(void);
/**
 * Free a float array allocated by Kjarni.
 */
void kjarni_float_array_free(struct KjarniFloatArray arr);
/**
 * Free a 2D float array allocated by Kjarni.
 */
void kjarni_float_2d_array_free(struct KjarniFloat2DArray arr);
/**
 * Get the name of an error code as a C string.
 */
const char *kjarni_error_name(enum KjarniErrorCode err);
/**
 * Get the last error message. Returns NULL if no error.
 */
const char *kjarni_last_error_message(void);
/**
 * Clear the last error.
 */
void kjarni_clear_error(void);