crates/kjarni-ffi/bindings/csharp/Kjarni/Native.cs

using System;
using System.IO;
using System.Reflection;
using System.Collections.Generic;
using System.Runtime.InteropServices;

namespace Kjarni
{
    public enum KjarniErrorCode
    {
        Ok = 0,
        NullPointer = 1,
        InvalidUtf8 = 2,
        ModelNotFound = 3,
        LoadFailed = 4,
        InferenceFailed = 5,
        GpuUnavailable = 6,
        InvalidConfig = 7,
        Cancelled = 8,
        Timeout = 9,
        StreamEnded = 10,
        Unknown = 255,
    }

    public enum KjarniDevice
    {
        Cpu = 0,
        Gpu = 1,
    }

    public enum KjarniSearchMode
    {
        Keyword = 0,
        Semantic = 1,
        Hybrid = 2,
    }

    public enum KjarniProgressStage
    {
        Scanning = 0,
        Loading = 1,
        Embedding = 2,
        Writing = 3,
        Committing = 4,
        Searching = 5,
        Reranking = 6,
    }

    internal static class Native
    {
        private const string LibName = "kjarni_ffi";

        static Native()
        {
            NativeLibrary.SetDllImportResolver(typeof(Native).Assembly, ImportResolver);
        }

        private static IntPtr ImportResolver(string libraryName, Assembly assembly, DllImportSearchPath? searchPath)
        {
            if (libraryName != LibName)
            {
                return IntPtr.Zero;
            }

            string[] candidates;
            if (RuntimeInformation.IsOSPlatform(OSPlatform.Windows))
            {
                candidates = new[] { "kjarni_ffi.dll", "libkjarni_ffi.dll" };
            }
            else if (RuntimeInformation.IsOSPlatform(OSPlatform.OSX))
            {
                candidates = new[] { "libkjarni_ffi.dylib", "kjarni_ffi.dylib" };
            }
            else
            {
                candidates = new[] { "libkjarni_ffi.so", "kjarni_ffi.so" };
            }

            var assemblyDir = Path.GetDirectoryName(assembly.Location) ?? ".";
            var searchDirs = new[]
            {
                assemblyDir,
                Path.Combine(assemblyDir, "runtimes", GetRuntimeIdentifier(), "native"),
                Path.Combine(assemblyDir, "native"),
                Environment.CurrentDirectory,
            };

            foreach (var dir in searchDirs)
            {
                foreach (var candidate in candidates)
                {
                    var fullPath = Path.Combine(dir, candidate);
                    if (File.Exists(fullPath))
                    {
                        return NativeLibrary.Load(fullPath);
                    }
                }
            }

            foreach (var candidate in candidates)
            {
                if (NativeLibrary.TryLoad(candidate, out var handle))
                {
                    return handle;
                }
            }

            return IntPtr.Zero;
        }

        private static string GetRuntimeIdentifier()
        {
            var arch = RuntimeInformation.OSArchitecture switch
            {
                Architecture.X64 => "x64",
                Architecture.Arm64 => "arm64",
                Architecture.X86 => "x86",
                _ => "x64"
            };

            if (RuntimeInformation.IsOSPlatform(OSPlatform.Windows))
                return $"win-{arch}";
            if (RuntimeInformation.IsOSPlatform(OSPlatform.OSX))
                return $"osx-{arch}";
            return $"linux-{arch}";
        }
        [StructLayout(LayoutKind.Sequential)]
        public struct KjarniFloatArray
        {
            public IntPtr Data;
            public UIntPtr Len;

            public float[] ToArray()
            {
                var len = (int)Len;
                if (len == 0 || Data == IntPtr.Zero) return Array.Empty<float>();
                var result = new float[len];
                Marshal.Copy(Data, result, 0, len);
                return result;
            }
        }

        [StructLayout(LayoutKind.Sequential)]
        public struct KjarniFloat2DArray
        {
            public IntPtr Data;
            public UIntPtr Rows;
            public UIntPtr Cols;

            public float[][] ToArray()
            {
                var rows = (int)Rows;
                var cols = (int)Cols;
                if (rows == 0 || cols == 0 || Data == IntPtr.Zero)
                    return Array.Empty<float[]>();

                var flat = new float[rows * cols];
                Marshal.Copy(Data, flat, 0, rows * cols);

                var result = new float[rows][];
                for (int i = 0; i < rows; i++)
                {
                    result[i] = new float[cols];
                    Array.Copy(flat, i * cols, result[i], 0, cols);
                }
                return result;
            }
        }
        [StructLayout(LayoutKind.Sequential)]
        public struct KjarniEmbedderConfig
        {
            public KjarniDevice Device;
            public IntPtr CacheDir;
            public IntPtr ModelName;
            public IntPtr ModelPath;
            public int Normalize;
            public int Quiet;
        }
        [StructLayout(LayoutKind.Sequential)]
        public struct KjarniClassResult
        {
            public IntPtr Label;
            public float Score;
        }

        [StructLayout(LayoutKind.Sequential)]
        public struct KjarniClassResults
        {
            public IntPtr Results;
            public UIntPtr Len;

            public (string Label, float Score)[] ToArray()
            {
                var len = (int)Len;
                if (len == 0 || Results == IntPtr.Zero)
                    return Array.Empty<(string, float)>();

                var result = new (string, float)[len];
                var structSize = Marshal.SizeOf<KjarniClassResult>();

                for (int i = 0; i < len; i++)
                {
                    var ptr = IntPtr.Add(Results, i * structSize);
                    var item = Marshal.PtrToStructure<KjarniClassResult>(ptr);
                    var label = item.Label != IntPtr.Zero
                        ? Marshal.PtrToStringUTF8(item.Label) ?? ""
                        : "";
                    result[i] = (label, item.Score);
                }
                return result;
            }
        }

        [StructLayout(LayoutKind.Sequential)]
        public struct KjarniClassifierConfig
        {
            public KjarniDevice Device;
            public IntPtr CacheDir;
            public IntPtr ModelName;
            public IntPtr ModelPath;
            public IntPtr Labels;
            public UIntPtr NumLabels;
            public int MultiLabel;
            public int Quiet;
        }
        [StructLayout(LayoutKind.Sequential)]
        public struct KjarniRerankResult
        {
            public UIntPtr Index;
            public float Score;
        }

        [StructLayout(LayoutKind.Sequential)]
        public struct KjarniRerankResults
        {
            public IntPtr Results;
            public UIntPtr Len;

            public (int Index, float Score)[] ToArray()
            {
                var len = (int)Len;
                if (len == 0 || Results == IntPtr.Zero)
                    return Array.Empty<(int, float)>();

                var result = new (int, float)[len];
                var structSize = Marshal.SizeOf<KjarniRerankResult>();

                for (int i = 0; i < len; i++)
                {
                    var ptr = IntPtr.Add(Results, i * structSize);
                    var item = Marshal.PtrToStructure<KjarniRerankResult>(ptr);
                    result[i] = ((int)item.Index, item.Score);
                }
                return result;
            }
        }

        [StructLayout(LayoutKind.Sequential)]
        public struct KjarniRerankerConfig
        {
            public KjarniDevice Device;
            public IntPtr CacheDir;
            public IntPtr ModelName;
            public IntPtr ModelPath;
            public int Quiet;
        }
        [StructLayout(LayoutKind.Sequential)]
        public struct KjarniIndexStats
        {
            public UIntPtr DocumentsIndexed;
            public UIntPtr ChunksCreated;
            public UIntPtr Dimension;
            public ulong SizeBytes;
            public UIntPtr FilesProcessed;
            public UIntPtr FilesSkipped;
            public ulong ElapsedMs;
        }

        [StructLayout(LayoutKind.Sequential)]
        public struct KjarniIndexInfo
        {
            public IntPtr Path;
            public UIntPtr DocumentCount;
            public UIntPtr SegmentCount;
            public UIntPtr Dimension;
            public ulong SizeBytes;
            public IntPtr EmbeddingModel;
        }

        [StructLayout(LayoutKind.Sequential)]
        public struct KjarniIndexerConfig
        {
            public KjarniDevice Device;
            public IntPtr CacheDir;
            public IntPtr ModelName;
            public UIntPtr ChunkSize;
            public UIntPtr ChunkOverlap;
            public UIntPtr BatchSize;
            public IntPtr Extensions;
            public IntPtr ExcludePatterns;
            public int Recursive;
            public int IncludeHidden;
            public UIntPtr MaxFileSize;
            public int Quiet;
        }

        [StructLayout(LayoutKind.Sequential)]
        public struct KjarniProgress
        {
            public KjarniProgressStage Stage;
            public UIntPtr Current;
            public UIntPtr Total;
            public IntPtr Message;
        }

        // Progress callback delegate
        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void KjarniProgressCallback(KjarniProgress progress, IntPtr userData);

        [StructLayout(LayoutKind.Sequential)]
        public struct KjarniSearchResult
        {
            public float Score;
            public UIntPtr DocumentId;
            public IntPtr Text;
            public IntPtr MetadataJson;
        }

        [StructLayout(LayoutKind.Sequential)]
        public struct KjarniSearchResults
        {
            public IntPtr Results;
            public UIntPtr Len;
        }

        [StructLayout(LayoutKind.Sequential)]
        public struct KjarniSearchOptions
        {
            public int Mode;
            public UIntPtr TopK;
            public int UseReranker;
            public float Threshold;
            public IntPtr SourcePattern;
            public IntPtr FilterKey;
            public IntPtr FilterValue;
        }

        [StructLayout(LayoutKind.Sequential)]
        public struct KjarniSearcherConfig
        {
            public KjarniDevice Device;
            public IntPtr CacheDir;
            public IntPtr ModelName;
            public IntPtr RerankModel;
            public KjarniSearchMode DefaultMode;
            public UIntPtr DefaultTopK;
            public int Quiet;
        }

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr kjarni_last_error_message();

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void kjarni_clear_error();

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr kjarni_error_name(KjarniErrorCode err);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern KjarniErrorCode kjarni_init();

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr kjarni_version();

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void kjarni_float_array_free(KjarniFloatArray arr);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void kjarni_float_2d_array_free(KjarniFloat2DArray arr);
